--- a/Vistas/Login.html
+++ b/Vistas/Login.html
@@ -13,7 +13,7 @@
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
-    <title>HellBack</title>
+    <title>HellBank</title>
     <link rel="stylesheet" type="text/css" href="css/login.css">
 </head>
 
@@ -42,7 +42,15 @@
                             </label>
                             <button type="submit" class="btn btn-login float-right">Iniciar Sesión</button>
                         </div>
-
+                        <br>
+                        <div>
+                            <button id="registrarse" type="submit" class="btn btn-login float-right">Registrarse</button>
+                        </div>
+                        <br>
+                        <br>
+                        <div>
+                            <button id="entrarVis" type="submit" class="btn btn-login float-left">Entrar como visitante</button>
+                        </div>
                     </form>
                     <div class="copy-text">Created by HellSoft</a></div>
                 </div>
