--- a/Public/Vistas/Registrarse.html
+++ b/Public/Vistas/Registrarse.html
@@ -28,17 +28,17 @@
                     <div class="row">
                         <div class="col-xs-12 col-sm-6 col-md-6">
                             <div class="form-group">
-                                <input type="text" name="first_name" id="first_name" class="form-control input-lg" placeholder="Nombre" tabindex="1">
+                                <input type="text" name="nombre" id="nombre" class="form-control input-lg" placeholder="Nombre" tabindex="1">
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-6">
                             <div class="form-group">
-                                <input type="text" name="last_name" id="last_name" class="form-control input-lg" placeholder="Apellido" tabindex="2">
+                                <input type="text" name="apellido" id="apellido" class="form-control input-lg" placeholder="Apellido" tabindex="2">
                             </div>
                         </div>
                     </div>
                     <div class="form-group">
-                        <input type="text" name="display_name" id="display_name" class="form-control input-lg" placeholder="Nombre de Usuario" tabindex="3">
+                        <input type="text" name="user_name" id="user_name" class="form-control input-lg" placeholder="Nombre de Usuario" tabindex="3">
                     </div>
                     <div class="form-group">
                         <input type="email" name="email" id="email" class="form-control input-lg" placeholder="Correo Electrónico" tabindex="4">
@@ -58,7 +58,7 @@
                     </div>
                     <hr class="colorgraph">
                     <div class="row">
-                        <div class="col-xs-12 col-md-6"><input type="submit" value="Registrarse" class="btn btn-login btn-block btn-lg"
+                        <div class="col-xs-12 col-md-6"><input id="botonform" type="submit" value="Registrarse" class="btn btn-login btn-block btn-lg"
                                 tabindex="7">
                         </div>
                     </div>
