Sirve crear ahorros con navegabilidad

--- a/Public/Vistas/ObtenerProducto.html
+++ b/Public/Vistas/ObtenerProducto.html
@@ -20,9 +20,11 @@
 <body>
     <h1 class="title">Obtener Producto</h1>
     <div class="menu">
+      <form class="" action="./AbrirCuentaAhorros.html" method="post">
         <div class="container-fluid  margin">
-            <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Cuenta de Ahorros</button>
+          <button href="./AbrirCuentaAhorros.html" type="submit" target="_blank" class="themeBtn">Cuenta de Ahorros</button>
         </div>
+      </form>
         <div class="container-fluid  margin">
             <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Crédito</button>
         </div>
