Navegable credito cliente y visitante, y crear cliente

--- a/Public/Vistas/ObtenerProducto.html
+++ b/Public/Vistas/ObtenerProducto.html
@@ -25,9 +25,11 @@
           <button href="./AbrirCuentaAhorros.html" type="submit" target="_blank" class="themeBtn">Cuenta de Ahorros</button>
         </div>
       </form>
+      <form class="" action="./AbrirCreditoCliente.html" method="post">
         <div class="container-fluid  margin">
-            <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Crédito</button>
+          <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Crédito</button>
         </div>
+      </form>
         <div class="container-fluid  margin">
             <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Tarjeta de Crédito</button>
         </div>
