--- a/Public/Vistas/PrincipalVisitante.html
+++ b/Public/Vistas/PrincipalVisitante.html
@@ -20,9 +20,11 @@
 <body>
     <h1 class="title">Menú Principal</h1>
     <div class="menu">
+      <form action="./AbrirCreditoVis.html" method="post">
         <div class="container-fluid  margin">
-            <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Obtener Producto</button>
+          <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Obtener Credito</button>
         </div>
+      </form>
         <div class="container-fluid  margin">
             <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Operación Bancaria</button>
         </div>
