get ahorros y otros cambios

--- a/Public/Vistas/Login.html
+++ b/Public/Vistas/Login.html
@@ -43,11 +43,13 @@
               <button id="id_iniciar" type="submit" class="btn btn-login float-right">Iniciar Sesión</button>
             </div>
             <br>
+            <br>
+            <br>
+          </form>
+          <form action="./Registrarse.html" method="post">
             <div>
               <button id="registrarse" type="submit" class="btn btn-login float-right">Registrarse</button>
             </div>
-            <br>
-            <br>
           </form>
           <form action="./PrincipalVisitante.html" method="post">
             <div>
