--- a/Public/Vistas/ObtenerProducto.html
+++ b/Public/Vistas/ObtenerProducto.html
@@ -30,9 +30,11 @@
           <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Crédito</button>
         </div>
       </form>
+      <form action="./PedirTarjetaCre.html" method="post">
         <div class="container-fluid  margin">
-            <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Tarjeta de Crédito</button>
+          <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Tarjeta de Crédito</button>
         </div>
+      </form>
     </div>
 </body>
 
