--- a/Public/Vistas/PedirTarjetaCre.html
+++ b/Public/Vistas/PedirTarjetaCre.html
@@ -7,22 +7,22 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <title>Pedir Tarjeta</title>
+    <script src="./Logica/crear_tcredito.js"></script>
 </head>
 
 <body>
     <form>
         <div class="form-group">
             <label for="formGroupExampleInput">Id de la cuenta de ahorros asociada</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese id">
+            <input type="text" class="form-control" id="cuenta_ahorros" placeholder="Ingrese id">
             <br>
-            <input type="submit" value="Pedir Tarjeta de Crédito" class="btn btn-primary">
+            <input id="ok_crear" type="submit" value="Pedir Tarjeta de Crédito" class="btn btn-primary">
         </div>
     </form>
 </body>
