Funciones y otras cosas

--- a/Public/Vistas/ConsignacionCliente.html
+++ b/Public/Vistas/ConsignacionCliente.html
@@ -19,7 +19,7 @@
 
 <body>
     <h1>Consignación</h1>
-    <form method="POST" action="/consignar.php">
+    <form method="POST" action="/consignarCliente.php">
         <div class="form-group">
             <label for="formGroupExampleInput">Número producto origen</label>
             <input type="text" name="idProductoOrigen" class="form-control" id="formGroupExampleInput" placeholder="Ingrese id">
