--- a/Public/Vistas/PrincipalCliente.html
+++ b/Public/Vistas/PrincipalCliente.html
@@ -34,9 +34,11 @@
         <button href="./CentroMensajeCliente.php" target="_blank" class="themeBtn">Centro de Mensajes</button>
       </div>
     </form>
-    <div class="container-fluid  margin">
-      <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Reporte de Movimientos</button>
-    </div>
+    <form action="./ReporteMovimiento.php">
+      <div class="container-fluid  margin">
+        <button target="_blank" class="themeBtn">Reporte de Movimientos</button>
+      </div>
+    </form>
   </div>
 </body>
 
