--- a/Public/Vistas/PedirTarjetaCre.html
+++ b/Public/Vistas/PedirTarjetaCre.html
@@ -14,15 +14,16 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <title>Pedir Tarjeta</title>
+    <script src="./Logica/pedir_tarjeta_credito.js"></script>
 </head>
 
 <body>
     <form>
         <div class="form-group">
-            <label for="formGroupExampleInput">Id de la cuenta de ahorros asociada</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese id">
+            <label for="formGroupExampleInput">   Id de la cuenta de ahorros asociada</label>
+            <input type="text" class="form-control" id="id_cuenta" placeholder="Ingrese id">
             <br>
-            <input type="submit" value="Pedir Tarjeta de Crédito" class="btn btn-primary">
+            <input id="pedir_tarjeta" type="submit" value="Pedir Tarjeta de Crédito" class="btn btn-primary">
         </div>
     </form>
 </body>
