--- a/Public/Vistas/TarjetasCreditoAdmin.html
+++ b/Public/Vistas/TarjetasCreditoAdmin.html
@@ -31,13 +31,13 @@
             <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese cupo máximo">
             <br>
             <label for="formGroupExampleInput">Sobrecupo</label>
-            <input type="date" class="form-control" id="formGroupExampleInput" placeholder="Ingrese sobrecupo">
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese sobrecupo">
             <br>
             <label for="formGroupExampleInput">Cuota de Manejo</label>
-            <input type="date" class="form-control" id="formGroupExampleInput" placeholder="Ingrese cuota de manejo">
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese cuota de manejo">
             <br>
             <label for="formGroupExampleInput">Tasa Interés</label>
-            <input type="date" class="form-control" id="formGroupExampleInput" placeholder="Ingrese tasa de interés">
+            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese tasa de interés">
             <br>
             <input type="submit" value="Aprobar" class="btn btn-primary">
             <br>
