--- a/Public/Vistas/PedirTarjetaCre.html
+++ b/Public/Vistas/PedirTarjetaCre.html
@@ -19,8 +19,12 @@
 <body>
     <form>
         <div class="form-group">
+          <br>
+          <br>
+          <br>
             <label for="formGroupExampleInput">Id de la cuenta de ahorros asociada</label>
-            <input type="text" class="form-control" id="cuenta_ahorros" placeholder="Ingrese id">
+            <select name="cuentas_user" id="cuentas_usr">
+            </select>
             <br>
             <input id="ok_crear" type="submit" value="Pedir Tarjeta de Crédito" class="btn btn-primary">
         </div>
