--- a/Public/Vistas/CompraTarjeta.html
+++ b/Public/Vistas/CompraTarjeta.html
@@ -14,37 +14,36 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/princUsVis.css">
-    <script src="./Logica/compra_tarjeta.js"></script>
     <title>Compra Tarjeta</title>
 </head>
 
 <body>
     <h1>Compra Tarjeta de crédto</h1>
-    <form>
+    <form method="POST" action="/HellBank/Funciones/ComprarTarjetaCredito.php">
         <div class="form-group">
             <label for="formGroupExampleInput">Número tarjeta origen</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Id tarjeta">
+            <input name="numTargeta" type="text" class="form-control" id="formGroupExampleInput" placeholder="Id tarjeta">
             <br>
             <label for="formGroupExampleInput">Número de cuotas</label>
             <select name="cuotas">
-                    <option value="una">1</option>
-                    <option value="dos">2</option>
-                    <option value="tres">3</option>
-                    <option value="cuatro">4</option>
-                    <option value="cinco">5</option>
-                    <option value="seis">6</option>
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
             </select>
             <br>
             <label for="formGroupExampleInput">Monto</label>
-            <input type="text" class="form-control" id="MontoComp" placeholder="Ingrese monto">
+            <input type="text" name="MontoComp" class="form-control" id="MontoComp" placeholder="Ingrese monto">
             <br>
             <label for="formGroupExampleInput">Tipo de moneda: </label>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="JaveCoins">
                 <label class="form-check-label" for="inlineRadio1">JaveCoins</label>
             </div>
             <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="option1">
+                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Pesos">
                 <label class="form-check-label" for="inlineRadio1">Pesos</label>
             </div>
             <br>
