--- a/Public/Vistas/ConsignacionVisitante.html
+++ b/Public/Vistas/ConsignacionVisitante.html
@@ -28,8 +28,8 @@
             </select>
             <input type="text" name="idProductoDestino" class="form-control" id="formGroupExampleInput" placeholder="Ingrese id">
             <br>
-            <label for="formGroupExampleInput">Número cédula</label>
-            <input name="cedula" type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese cédula">
+            <label for="formGroupExampleInput">Email</label>
+            <input name="email" type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese cédula">
             <br>
             <label for="formGroupExampleInput">Monto</label>
             <input type="text" name="monto" class="form-control" id="formGroupExampleInput" placeholder="Ingrese monto">
