--- a/Public/Vistas/OperacionBancaria.html
+++ b/Public/Vistas/OperacionBancaria.html
@@ -20,18 +20,26 @@
 <body>
     <h1 class="title">Operación Bancaria</h1>
     <div class="menu">
+      <form class="" action="./Retiro.html" method="post">
         <div class="container-fluid  margin">
             <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Retiro</button>
         </div>
+      </form>
+      <form action="./ConsignacionCliente.html" method="post">
         <div class="container-fluid  margin">
             <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Consignación</button>
         </div>
+      </form>
+      <form class="" action="./CompraTarjeta.html" method="post">
         <div class="container-fluid  margin">
-            <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Compra con Tarjeta de Crédito</button>
+          <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Compra con Tarjeta de Crédito</button>
         </div>
+      </form>
+      <form class="" action="./Transferencia.html"class="" html" method="post">
         <div class="container-fluid  margin">
-                <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Transferencia</button>
+          <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Transferencia</button>
         </div>
+      </form>
     </div>
 </body>
 
