--- a/Public/Vistas/PrincipalCliente.html
+++ b/Public/Vistas/PrincipalCliente.html
@@ -26,9 +26,11 @@
         <button type="submit" href="./ObtenerProducto.html" target="_blank" class="themeBtn">Obtener Producto</button>
       </div>
     </form>
-    <div class="container-fluid  margin">
-      <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Operación Bancaria</button>
-    </div>
+    <form  action="./OperacionBancaria.html" method="post">
+      <div class="container-fluid  margin">
+        <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Operación Bancaria</button>
+      </div>
+    </form>
     <form action="./CentroMensajeCliente.php">
       <div class="container-fluid  margin">
         <button href="./CentroMensajeCliente.php" target="_blank" class="themeBtn">Centro de Mensajes</button>
