--- a/Public/Vistas/PedirTarjetaCre.html
+++ b/Public/Vistas/PedirTarjetaCre.html
@@ -26,7 +26,7 @@
             <select name="cuentas_user" id="cuentas_usr">
             </select>
             <br>
-            <input id="pedir_tarjeta" type="submit" value="Pedir Tarjeta de Crédito" class="btn btn-primary">
+            <input id="ok_crear" type="submit" value="Pedir Tarjeta de Crédito" class="btn btn-primary">
         </div>
     </form>
 </body>
