compra tarjeta corregido

--- a/Public/Vistas/PrincipalAdmin.html
+++ b/Public/Vistas/PrincipalAdmin.html
@@ -37,15 +37,21 @@
             </div>
     </form>
     <div class="menu">
+      <form action="/HellBank/Funciones/CentroMensajesAdmin.php">
         <div class="container-fluid  margin">
-            <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Centro de Mensajes</button>
+          <button type="submit" href="./ObtenerProducto.html" target="_blank" class="themeBtn">Centro de Mensajes</button>
         </div>
+      </form>
+      <form   method="post">
         <div class="container-fluid  margin">
-            <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Ver Usuarios</button>
+          <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Ver usuarios</button>
         </div>
+      </form>
+      <form>
         <div class="container-fluid  margin">
-            <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Fin de Mes</button>
+          <button href="./CentroMensajeCliente.php" target="_blank" class="themeBtn">Fin de mes</button>
         </div>
+      </form>
     </div>
 </body>
 
