Centro de mensajes de admin

--- a/Public/Vistas/PrincipalVisitante.html
+++ b/Public/Vistas/PrincipalVisitante.html
@@ -15,6 +15,7 @@
         crossorigin="anonymous"></script>
     <title>Menu Visitante</title>
     <link rel="stylesheet" type="text/css" href="css/princUsVis.css">
+    <script src="./Logica/centro_mensajes.js"></script>
 </head>
 
 <body>
