--- a/Public/Vistas/CentroMensajesAdmin.html
+++ b/Public/Vistas/CentroMensajesAdmin.html
@@ -7,18 +7,53 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/princUsVis.css">
+    <script src="./Logica/principal_admin.js"></script>
     <title>Centro de Mensajes</title>
+    <style>
+.button {
+    background-color: #4CAF50;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+</style>
 </head>
 
-<body>
+<body onload="correr()">
+
         <h1>Centro de Mensajes</h1>
+        <h2>Tarjetas de credito</h2>
+<form class="" action="index.html" method="post">
+        <select name="tarjetas" id="tarjetas">
+        </select>
+        <input type="button" class="button" value="Gestionar">
+</form>
+<form class="" action="index.html" method="post">
+        <h2>Credito de clientes </h2>
+        <select name="crec" id="crec">
+        </select>
+        <input type="button" class="button" value="Gestionar">
+</form>
+<form class="" action="index.html" method="post">
+        <h2>Credito de invitados</h2>
+        <select name="crei" id="crei">
+        </select>
+        <input type="button" class="button" value="Gestionar">
+</form>
+
+
 </body>
 
 </html>
