--- a/Public/Vistas/CompraTarjeta.html
+++ b/Public/Vistas/CompraTarjeta.html
@@ -19,13 +19,13 @@
 
 <body>
     <h1>Compra Tarjeta de crédto</h1>
-    <form method="POST" action="/HellBank/Funciones/ComprarTarjetaCredito.php">
+    <form >
         <div class="form-group">
             <label for="formGroupExampleInput">Número tarjeta origen</label>
             <input name="numTargeta" type="text" class="form-control" id="formGroupExampleInput" placeholder="Id tarjeta">
             <br>
             <label for="formGroupExampleInput">Número de cuotas</label>
-            <select name="cuotas">
+            <select id="n_cuotas" name="cuotas">
                     <option value="1">1</option>
                     <option value="2">2</option>
                     <option value="3">3</option>
