--- a/Public/Vistas/PrincipalCliente.html
+++ b/Public/Vistas/PrincipalCliente.html
@@ -28,7 +28,7 @@
     </form>
     <form  action="./OperacionBancaria.html" method="post">
       <div class="container-fluid  margin">
-        <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Operación Bancaria</button>
+        <button target="_blank" class="themeBtn">Operación Bancaria</button>
       </div>
     </form>
     <form action="./CentroMensajeCliente.php">
