Función Transferencia bancaria

--- a/Public/Vistas/PrincipalAdmin.html
+++ b/Public/Vistas/PrincipalAdmin.html
@@ -23,13 +23,13 @@
   <form method="POST" action="\SetearIntereses.php">
     <div class="form-group">
       <label for="formGroupExampleInput">Interés cuentas de ahorro</label>
-      <input type="text" name="iCA" class="form-control" id="formGroupExampleInput" placeholder="Ingrese interés">
+      <input type="text" name="iCA" value="0" class="form-control" id="formGroupExampleInput" placeholder="Ingrese interés">
       <br>
       <label for="formGroupExampleInput">Interés crédito visitantes</label>
-      <input type="text" name="iCV" class="form-control" id="formGroupExampleInput" placeholder="Ingrese interés">
+      <input type="text" name="iCV" value="0" class="form-control" id="formGroupExampleInput" placeholder="Ingrese interés">
       <br>
       <label for="formGroupExampleInput">Costo operaciones entre bancos</label>
-      <input type="text" name="COB" class="form-control" id="formGroupExampleInput" placeholder="Ingrese costo">
+      <input type="text" name="COB" value="0" class="form-control" id="formGroupExampleInput" placeholder="Ingrese costo">
       <input type="submit" value="Guardar" class="btn btn-primary">
       <br>
     </div>
