--- a/Public/Vistas/CentroMensajesAdmin.html
+++ b/Public/Vistas/CentroMensajesAdmin.html
@@ -14,6 +14,9 @@
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/princUsVis.css">
     <script src="./Logica/principal_admin.js"></script>
+  <script src="./Logica/gest.js"></script>
+
+</form>
     <title>Centro de Mensajes</title>
     <style>
 .button {
@@ -36,21 +39,21 @@
         <h1>Centro de Mensajes</h1>
         <h2>Tarjetas de credito</h2>
 <form class="" action="index.html" method="post">
-        <select name="tarjetas" id="tarjetas">
+        <select name="tarj" id="tarj">
         </select>
-        <input type="button" class="button" value="Gestionar">
+        <input id="gestt" type="button" class="button" value="Gestionar">
 </form>
-<form class="" action="index.html" method="post">
+<form class="" action="CreditoClienteAdmin.html" method="post">
         <h2>Credito de clientes </h2>
         <select name="crec" id="crec">
         </select>
-        <input type="button" class="button" value="Gestionar">
-</form>
+        <input id="gestc" type="button" class="button" value="Gestionar">
+
 <form class="" action="index.html" method="post">
         <h2>Credito de invitados</h2>
         <select name="crei" id="crei">
         </select>
-        <input type="button" class="button" value="Gestionar">
+        <input id="gesti"type="button" class="button" value="Gestionar">
 </form>
 
 
