--- a/Public/Vistas/TarjetasCreditoAdmin.html
+++ b/Public/Vistas/TarjetasCreditoAdmin.html
@@ -7,25 +7,28 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/princUsVis.css">
+    <script src="./Logica/gestionar_tarjeta.js"></script>
     <title>Crédito Cliente</title>
 </head>
 
 <body>
-    <h1>Administrar Crédito</h1>
+    <h1>Administrar Tarjeta Crédito</h1>
     <form>
         <div class="form-group">
             <label for="formGroupExampleInput">Número producto </label>
+            <label id="nump" for="formGroupExampleInput"> </label>
             <br>
             <label for="formGroupExampleInput">Id Dueño</label>
+            <label id="idDu" for="formGroupExampleInput"> </label>
             <br>
             <label for="formGroupExampleInput">Número cuenta asociada </label>
+            <label id="cuen" for="formGroupExampleInput"> </label>
             <br>
             <label for="formGroupExampleInput">Cupo Máximo</label>
             <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese cupo máximo">
