--- a/Public/Vistas/CompraTarjeta.html
+++ b/Public/Vistas/CompraTarjeta.html
@@ -2,54 +2,52 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-        crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-    <link rel="stylesheet" type="text/css" href="css/princUsVis.css">
-    <title>Compra Tarjeta</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+  crossorigin="anonymous">
+  <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+  crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+  crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="css/princUsVis.css">
+  <title>Compra Tarjeta</title>
+  <script src="./Logica/compra_tcredito.js"></script>
 </head>
 
 <body>
-    <h1>Compra Tarjeta de crédto</h1>
-    <form >
-        <div class="form-group">
-            <label for="formGroupExampleInput">Número tarjeta origen</label>
-            <input name="numTargeta" type="text" class="form-control" id="formGroupExampleInput" placeholder="Id tarjeta">
-            <br>
-            <label for="formGroupExampleInput">Número de cuotas</label>
-            <select id="n_cuotas" name="cuotas">
-                    <option value="1">1</option>
-                    <option value="2">2</option>
-                    <option value="3">3</option>
-                    <option value="4">4</option>
-                    <option value="5">5</option>
-                    <option value="6">6</option>
-            </select>
-            <br>
-            <label for="formGroupExampleInput">Monto</label>
-            <input type="text" name="MontoComp" class="form-control" id="MontoComp" placeholder="Ingrese monto">
-            <br>
-            <label for="formGroupExampleInput">Tipo de moneda: </label>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="JaveCoins">
-                <label class="form-check-label" for="inlineRadio1">JaveCoins</label>
-            </div>
-            <div class="form-check form-check-inline">
-                <input class="form-check-input" type="radio" name="inlineRadioOptions" id="inlineRadio1" value="Pesos">
-                <label class="form-check-label" for="inlineRadio1">Pesos</label>
-            </div>
-            <br>
-            <input id="comprar" type="submit" value="Comprar" class="btn btn-primary">
-        </div>
-    </form>
+  <h1>Compra Tarjeta de crédto</h1>
+  <form >
+    <div class="form-group">
+      <label >Número tarjeta origen</label>
+      <br>
+      <select name="cuentas_user" id="cuentas_usr">
+      </select>
+      <br>
+      <label for="formGroupExampleInput">Número de cuotas</label>
+      <select id="n_cuotas" name="cuotas">
+        <option value="1">1</option>
+        <option value="2">2</option>
+        <option value="3">3</option>
+        <option value="4">4</option>
+        <option value="5">5</option>
+        <option value="6">6</option>
+      </select>
+      <br>
+      <label for="formGroupExampleInput">Monto</label>
+      <input type="text" name="MontoComp" class="form-control" id="monto" placeholder="Ingrese monto">
+      <br>
+      <label for="formGroupExampleInput">Tipo de moneda: </label>
+      <select id="moneda" name="tipoMoneda">
+        <option value="javecoins">Javecoins</option>
+        <option value="pesos">Pesos</option>
+      </select>
+      <br>
+      <input id="ok_crear" type="submit" value="Comprar" class="btn btn-primary">
+    </div>
+  </form>
 </body>
 
 </html>
