--- a/Public/Vistas/ConsignacionVisitante.html
+++ b/Public/Vistas/ConsignacionVisitante.html
@@ -7,40 +7,40 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
         crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
         crossorigin="anonymous"></script>
     <link rel="stylesheet" type="text/css" href="css/princUsVis.css">
     <title>Consignación Visitante</title>
+    <script src="./Logica/consignar_visitante.js"></script>
 </head>
 
 <body>
     <h1>Consignación</h1>
-    <form method="POST" action="/consignarVisitante.php">
+    <form>
         <div class="form-group">
             <label for="formGroupExampleInput">Número producto destino</label>
-            <select name="tipoProducto">
+            <select id="tipo_d" name="tipoProducto">
                 <option value="ahorros">Cuenta Ahorros</option>
                 <option value="credito">Crédito</option>
             </select>
-            <input type="text" name="idProductoDestino" class="form-control" id="formGroupExampleInput" placeholder="Ingrese id">
+            <input type="text" name="idProductoDestino" class="form-control" id="destino" placeholder="Ingrese id">
             <br>
             <label for="formGroupExampleInput">Email</label>
-            <input name="email" type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese cédula">
+            <input id="correo" name="email" type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese cédula">
             <br>
             <label for="formGroupExampleInput">Monto</label>
-            <input type="text" name="monto" class="form-control" id="formGroupExampleInput" placeholder="Ingrese monto">
+            <input type="text" name="monto" class="form-control" id="monto" placeholder="Ingrese monto">
             <br>
             <label for="formGroupExampleInput">Tipo de moneda: </label>
-            <select name="tipoMoneda">
+            <select id="moneda" name="tipoMoneda">
                     <option value="javecoins">Javecoins</option>
                     <option value="pesos">Pesos</option>
                 </select>
             <br>
-            <input type="submit" value="Consignar" class="btn btn-primary">
+            <input id="ok_crear" type="submit" value="Consignar" class="btn btn-primary">
         </div>
     </form>
 </body>
