--- a/Public/Vistas/PrincipalVisitante.html
+++ b/Public/Vistas/PrincipalVisitante.html
@@ -15,7 +15,6 @@
         crossorigin="anonymous"></script>
     <title>Menu Visitante</title>
     <link rel="stylesheet" type="text/css" href="css/princUsVis.css">
-    <script src="./Logica/centro_mensajes.js"></script>
 </head>
 
 <body>
@@ -26,9 +25,11 @@
           <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Obtener Credito</button>
         </div>
       </form>
+      <form  action="./ConsignacionVisitante.html" method="post">
         <div class="container-fluid  margin">
-            <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Operación Bancaria</button>
+          <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Operación Bancaria</button>
         </div>
+      </form>
     </div>
 </body>
 
