reporte de transacciones

--- a/Public/Vistas/PrincipalAdmin.html
+++ b/Public/Vistas/PrincipalAdmin.html
@@ -35,9 +35,9 @@
     </div>
   </form>
   <div class="menu">
-    <form action="/HellBank/Funciones/CentroMensajesAdmin.php">
+    <form action="CentroMensajesAdmin.html">
       <div class="container-fluid  margin">
-        <button type="submit" href="./ObtenerProducto.html" target="_blank" class="themeBtn">Centro de Mensajes</button>
+        <button type="submit"  class="themeBtn">Centro de Mensajes</button>
       </div>
     </form>
     <form method="post">
