--- a/Public/Vistas/PrincipalCliente.html
+++ b/Public/Vistas/PrincipalCliente.html
@@ -36,7 +36,7 @@
         <button href="./CentroMensajeCliente.php" target="_blank" class="themeBtn">Centro de Mensajes</button>
       </div>
     </form>
-    <form action="./ReporteMovimiento.php">
+    <form action="./MostrarMovimientos.html">
       <div class="container-fluid  margin">
         <button target="_blank" class="themeBtn">Reporte de Movimientos</button>
       </div>
