--- a/Public/Vistas/CreditoClienteAdmin.html
+++ b/Public/Vistas/CreditoClienteAdmin.html
@@ -32,16 +32,11 @@
             <label id="idDu" for="formGroupExampleInput"> </label>
             <br>
             <label for="formGroupExampleInput">Tasa Interés</label>
-            <input type="text" class="form-control" id="tasaInteres" placeholder="Ingrese interés">
-            <input type="submit" value="Cambiar" class="btn btn-primary">
+            <input type="text" class="form-control" id="tasa_interes" placeholder="Ingrese interés">
+
+            <input id="aprobar_but" type="submit" value="Aprobar" class="btn btn-primary">
             <br>
-            <label for="formGroupExampleInput">Fecha de Pago</label>
-            <input type="date" class="form-control" id="fecha" placeholder="Ingrese fecha">
-            <input type="submit" value="Asignar" class="btn btn-primary">
-            <br>
-            <input type="submit" value="Aprobar" class="btn btn-primary">
-            <br>
-            <input type="submit" value="Rechazar" class="btn btn-primary">
+            <input id="rechazar_but" type="submit" value="Rechazar" class="btn btn-primary">
         </div>
     </form>
 </body>
