--- a/Public/Vistas/CreditoVisAdmin.html
+++ b/Public/Vistas/CreditoVisAdmin.html
@@ -29,14 +29,11 @@
             <br>
             <label for="formGroupExampleInput">Correo</label>
             <label id="email_vis" > </label>
+
             <br>
-            <label for="formGroupExampleInput">Fecha de Pago</label>
-            <input type="date" class="form-control" id="formGroupExampleInput" placeholder="Ingrese fecha">
-            <input type="submit" value="Asignar" class="btn btn-primary">
+            <input id="aprobar_but" type="submit" value="Aprobar" class="btn btn-primary">
             <br>
-            <input type="submit" value="Aprobar" class="btn btn-primary">
-            <br>
-            <input type="submit" value="Rechazar" class="btn btn-primary">
+            <input id="rechazar_but" type="submit" value="Rechazar" class="btn btn-primary">
         </div>
     </form>
 </body>
