--- a/Public/Vistas/TarjetasCreditoAdmin.html
+++ b/Public/Vistas/TarjetasCreditoAdmin.html
@@ -31,20 +31,20 @@
             <label id="cuen" for="formGroupExampleInput"> </label>
             <br>
             <label for="formGroupExampleInput">Cupo Máximo</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese cupo máximo">
+            <input type="text" class="form-control" id="cupomax" placeholder="Ingrese cupo máximo">
             <br>
             <label for="formGroupExampleInput">Sobrecupo</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese sobrecupo">
+            <input type="text" class="form-control" id="sobre_cupo" placeholder="Ingrese sobrecupo">
             <br>
             <label for="formGroupExampleInput">Cuota de Manejo</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese cuota de manejo">
+            <input type="text" class="form-control" id="cuota_manejo" placeholder="Ingrese cuota de manejo">
             <br>
             <label for="formGroupExampleInput">Tasa Interés</label>
-            <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Ingrese tasa de interés">
+            <input type="text" class="form-control" id="tasa_interes" placeholder="Ingrese tasa de interés">
             <br>
-            <input type="submit" value="Aprobar" class="btn btn-primary">
+            <input id="aprobar_but" type="submit" value="Aprobar" class="btn btn-primary">
             <br>
-            <input type="submit" value="Rechazar" class="btn btn-primary">
+            <input id="rechazar_but" type="submit" value="Rechazar" class="btn btn-primary">
         </div>
     </form>
 </body>
