--- a/Public/Vistas/PrincipalAdmin.html
+++ b/Public/Vistas/PrincipalAdmin.html
@@ -45,12 +45,12 @@
         <button href="https://www.behance.net/sakiran" target="_blank" class="themeBtn">Ver usuarios</button>
       </div>
     </form>
-    <form method="post" action="/FindeMes.php">
+    <form >
       <label for="formGroupExampleInput">Ingrese fecha a facturar</label>
-      <input type="date" name="fecha" class="form-control" id="formGroupExampleInput" placeholder="Ingrese fecha">
+      <input id="fecha" type="date" name="fecha" class="form-control" id="formGroupExampleInput" placeholder="Ingrese fecha">
       <br>
       <div class="container-fluid  margin">
-        <button target="_blank" class="themeBtn">Fin de mes</button>
+        <button id="fin_btn" target="_blank" class="themeBtn">Fin de mes</button>
       </div>
     </form>
   </div>
