Api publico Full + Index + Logout

--- a/Public/Vistas/PrincipalAdmin.html
+++ b/Public/Vistas/PrincipalAdmin.html
@@ -53,6 +53,11 @@
         <button id="fin_btn" target="_blank" class="themeBtn">Fin de mes</button>
       </div>
     </form>
+    <form action="./logout.html">
+      <div class="container-fluid  margin">
+        <button target="_blank" class="themeBtn">Cerrar Sesion</button>
+      </div>
+    </form>
   </div>
 </body>
 
