--- a/Public/Vistas/PrincipalCliente.html
+++ b/Public/Vistas/PrincipalCliente.html
@@ -37,6 +37,12 @@
         <button target="_blank" class="themeBtn">Reporte de Movimientos</button>
       </div>
     </form>
+
+    <form action="./logout.html">
+      <div class="container-fluid  margin">
+        <button target="_blank" class="themeBtn">Cerrar Sesion</button>
+      </div>
+    </form>
   </div>
 </body>
 
