--- a/Public/Vistas/logout.html
+++ b/Public/Vistas/logout.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="UTF-8">
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-  <title>Inicio</title>
-  <script src="redir.js"></script>
+  <title>Salir</title>
+  <script src="./Logica/logout.js"></script>
 </head>
-
 <body>
-  <h1>Inicio</h1>
+  <h1>Salir</h1>
 </body>
 
 </html>
