Centro de mensajes, Api Full reparado, Prinicipios de InterBancoAdicional

--- a/Public/Vistas/PrincipalCliente.html
+++ b/Public/Vistas/PrincipalCliente.html
@@ -38,6 +38,12 @@
       </div>
     </form>
 
+    <form action="./CentroMensajesCliente.html">
+      <div class="container-fluid  margin">
+        <button target="_blank" class="themeBtn">Centro de Mensajes</button>
+      </div>
+    </form>
+
     <form action="./logout.html">
       <div class="container-fluid  margin">
         <button target="_blank" class="themeBtn">Cerrar Sesion</button>
